# data-structures-and-algorithms

./: .editorconfig  .gitignore  README.md
code-challenges/: challenges-01.test.js  challenges-03.test.js  challenges-04.test.js  challenges-05.test.js  challenges-06.test.js  challenges-07.test.js  challenges-08.test.js  challenges-09.test.js  challenges-10.test.js  challenges-11.test.js  challenges-12.test.js  challenges-13.test.js  challenges-14.test.js
python/: README.md  pyproject.toml
python/array_shift/: README.md
python/code_challenges/array_binary_search/: README.md
python/code_challenges/array_reverse/: README.md
python/code_challenges/array_shift/: README.md
python/code_challenges/linked-list/: README.md  linked_list.py  ll_zip.py  pyproject.toml
python/code_challenges/linked-list/tests/: test_linked_list.py
python/code_challenges/stack-and-queue/: README.md  pyproject.toml
python/code_challenges/stack-and-queue/stack_and_queue/: stack_and_que.py
python/code_challenges/stack-and-queue/tests/: test_stack_and_queue.py
python/code_challenges/stack-queue-animal-shelter/: README.md  pyproject.toml
python/code_challenges/stack-queue-animal-shelter/stack_queue_animal_shelter/: stack_queue_animal_shelter.py
python/code_challenges/stack-queue-brackets/: README.md  pyproject.toml
python/code_challenges/stack-queue-brackets/tests/: test_stack_queue_brackets.py
