[tool.poetry]
name = "stack-and-queue"
version = "0.1.0"
description = ""
authors = ["santorsm <matt.santorsola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
black = "^21.6b0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
