[tool.poetry]
name = "stack-queue-animal-shelter"
version = "0.1.0"
description = ""
authors = ["santorsm <matt.santorsola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
jupyterlab = "^3.0.16"
black = "^21.6b0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
